<resources>
    <string name="app_name">PUVRoute</string>
    <string name="title_activity_maps">PUVRoute</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="map_maker_mode">Map Maker Mode</string>
    <string name="set_destination">Set Destination…</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="start_of_route">Start of Route - this is showed in every route as an indicator where the route starts.</string>
    <string name="end_of_route">End of Route - this is showed in every route that means it is the end ouf route.</string>
    <string name="route_path">Route Path - the whole route of every PUV is presented with color red line.</string>
    <string name="walk_path">Walk Path - this means user needs to walk to get into the route where PUV will pass.</string>
    <string name="map_maker_point">Map Maker Point - this can only be used by admin in adding routes; this marker is used in pointing a route.</string>
    <string name="destination_marker">Destination Marker - this marker will be seen by users after they specified their destination.</string>
</resources>
